--- a/capstone-design/css/style.css
+++ b/capstone-design/css/style.css
@@ -12,6 +12,7 @@
   color: #333;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -117,7 +118,7 @@ opacity: 100;
 #header .topmenu > li > a{
   position: relative;
   display: block;
-  font-size: 1.3em;
+  font-size: 1.25em;
   line-height: 100px;
   color: #333;
   text-decoration: none;
@@ -139,6 +140,9 @@ opacity: 100;
   color: #1C9FB3;
   transition: 0.2s;
 }
+#header .topmenuWrap .submenu li a{
+  color: #333;
+}
 #header.open .formbox{
   padding-bottom: 50px;
 }
@@ -150,19 +154,6 @@ opacity: 100;
   display: block;
 }
 
-#header.scroll .formbox{
-  background-color: #fff;
-}
-#header.scroll .topmenu > li > a{
-  color: #333;
-}
-#header.scroll .nav_top .quick_menu{
-background-color: #333;
-border: none;
-}
-#header.scroll .nav_top .quick_menu a{
-color: #fff;
-}
 
 
 
@@ -449,20 +440,30 @@ color: #fff;
   margin-bottom: 10px;
 }
 .signature_Origin .origin_right .origin_explanation{
+  margin-bottom: 30px;
+  line-height: 20px;
   font-size: 15px;
 }
 .signature_Origin .origin_right .price{
   font-size: 22px;
+  margin-bottom: 30px;
 }
 
 .progress-wrap{
+  display: block;
+  position: relative;
   width: 374px;
-  height: 21px;
+  height: 40px;
+  font-size: 14px;
+    line-height: 30px;
 }
 .progress-name{
   font-size: 15px;
 font-family: "Quicksand", Arial, sans-serif;
 margin-bottom: 10px;
+font-weight: 500;
+line-height: 1.1;
+color: inherit;
 }
 .progress{
   height: 6px;
@@ -470,6 +471,16 @@ margin-bottom: 10px;
 box-shadow: none;
 background: #f2f3f7;
 overflow: visible;
+}
+.progress {
+  height: 8px;
+  margin-bottom: 20px;
+  overflow: hidden;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+  box-shadow: none;
+    background: #f2f3f7;
+    overflow: visible;
 }
 .progress-bar.color-1{
   background: #6f853a;
@@ -490,6 +501,21 @@ text-align: right;
 position: relative;
 overflow: visible;
 border-radius: 8px;
+}
+.progress-bar {
+  float: left;
+  width: 0%;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+  background-color: #337ab7;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+  -webkit-transition: width .6s ease;
+  -o-transition: width .6s ease;
+  transition: width .6s ease;
 }
 .progress-bar.color-1::after{
   position: absolute;
