--- a/capstone-design/css/sub02.css
+++ b/capstone-design/css/sub02.css
@@ -16,31 +16,37 @@
     background-color: #083844;
 }
 .sub02_headerTitle{
-	width: 1200px;
-	margin: 0 auto;
-	background: transparent;
+    display: flex;
+    position: relative;
+    height: 400px;
+    width: 1920px;
+    min-width: 1200px;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
 }
 .sub02_subTilte{
+	display: block;
+    position: relative;
 	color: #fff;
+    width: 100%;
+    height: 50px;
 	font-size: 50px;
 	text-align: center;
-	line-height: 400px;
 	word-break: keep-all;
+    
 }
 
 /* small nevigation map */
 .smap{
+	display: block;
+    position: relative;
 	color: #fff;
-    line-height: 1;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-    position: absolute;
-    right: 0;
-    top: 500px;
+    width: 100%;
+	font-size: 15px;
+	text-align: center;
+	word-break: keep-all;
+    bottom: 0;
 }
 .smap a{
 	color: #fff;
@@ -50,9 +56,6 @@
 .smap li{
 	padding: 5px;
 	display: inline-block;
-}
-.smap li:nth-child(5){
-	padding-right: 320px;
 }
 
 /* subPage toggle menu */
@@ -129,7 +132,7 @@ div.product_kind_wrap div.product_select_wrap ul li input {
 
 /* subPage Content */
 div.product_view_tab_wrap {
-    width: 1240px;
+    width: 1200px;
     position: relative;
 	margin: 0 auto;
 }
