--- a/capstone-design/css/sub02.css
+++ b/capstone-design/css/sub02.css
@@ -2,20 +2,20 @@
 
 /* sub02_completeCapsule page */
 
-.sub02_container{
+.sub_container{
   width: 1920px;
   /* height: 900px; */
 }
 
 /* subPage header */
-.sub02_section1{
+.sub_section1{
     width: 100%;
     height: 400px;
     text-align: center;
     word-break: keep-all;
     background-color: #083844;
 }
-.sub02_headerTitle{
+.sub_headerTitle{
     display: flex;
     position: relative;
     height: 400px;
@@ -25,7 +25,7 @@
     flex-direction: column;
     justify-content: center;
 }
-.sub02_subTilte{
+.sub_subTilte{
 	display: block;
     position: relative;
 	color: #fff;
@@ -34,7 +34,7 @@
 	font-size: 50px;
 	text-align: center;
 	word-break: keep-all;
-    
+	padding-bottom: 30px;
 }
 
 /* small nevigation map */
@@ -188,19 +188,4 @@ div.product_list > dl > dd > ul li dt img{
 }
 div.product_list > dl > dd > ul li dl dd{
     padding: 10px 0;
-}
-div.product_list > dl > dd > ul li dl dd .put_cart{
-	margin: 0 auto;
-	width: 200px;
-	padding: 10px;
-    border-radius: 20px;
-    background-color: #b7b7b7;
-}
-div.product_list > dl > dd > ul li dl dd .put_cart:hover{
-	margin: 0 auto;
-	width: 200px;
-	padding: 10px;
-    border-radius: 20px;
-    background-color: #454545;
-	color: #fff;
 }
