--- a/capstone-design/css/style.css
+++ b/capstone-design/css/style.css
@@ -57,6 +57,7 @@ body{
   width: 1920px;
   min-width: 1920px;
   z-index: 100;
+  display: block;
   position: relative;
   top: 0;
   left: 0;
@@ -64,12 +65,14 @@ body{
 }
 
 #header .formbox{
-  width: 1200px;
   display: flex;
+
+  width: 1920px;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
   transition: all 0.3s ease-out;
+  z-index: 100;
 }
 #header .formbox input[type=text]{
 padding-left: 10px;
@@ -84,7 +87,7 @@ border-radius: 30px;
 #header .nav_top{
   position: absolute;
   display: block;
-  right: 355px;
+  right: 358px;
   top: 0;
   line-height: 100px;
 }
@@ -99,12 +102,15 @@ opacity: 100;
 }
 #header .formbox input[type=text]{
   position: absolute;
-  left: 347px;
+  left: 361px;
   top: 38px;
 }
+.topmenuWrap{
 
+}
 #header .topmenu{
   position: relative;
+  
   display: flex;
   justify-content: center;
   align-items: stretch;
@@ -135,6 +141,9 @@ opacity: 100;
 }
 #header .topmenuWrap .submenu{
   display: none;
+
+  margin: 0 auto;
+
 }
 #header .topmenuWrap .submenu #productMenu > li > a:hover {
   color: #1C9FB3;
@@ -144,7 +153,8 @@ opacity: 100;
   color: #333;
 }
 #header.open .formbox{
-  padding-bottom: 50px;
+    background: #fff;
+    padding-bottom: 50px;
 }
 #header.open .topmenu > li > a{
   color: #333;
@@ -159,7 +169,7 @@ opacity: 100;
 
 .header {
   position:relative;
-  text-align:center;
+  text-align:left;
   background: linear-gradient(60deg, #0092BF 0%, #33A9AB 100%);
   color:white;
 }
