--- a/capstone-design/css/style.css
+++ b/capstone-design/css/style.css
@@ -66,7 +66,7 @@ body{
 
 #header .formbox{
   display: flex;
-
+  position: absolute;
   width: 1920px;
   margin: 0 auto;
   justify-content: center;
