--- a/capstone-design/css/sub02.css
+++ b/capstone-design/css/sub02.css
@@ -7,6 +7,7 @@ body{
   -moz-osx-font-smoothing: auto;
 }
 .sub_container{
+    margin-top: 100px;
   width: 1920px;
   /* height: 900px; */
 }
@@ -156,7 +157,7 @@ div.product_view_tab_wrap {
 .product_list > ul{
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 .product_list li{
     width: 300px;
@@ -168,7 +169,7 @@ div.product_view_tab_wrap {
     margin-top: -180px;
     padding: 200px 30px 30px 30px;
     width: 290px;
-    height: 420px;
+    height: 395px;
     background-color: #efefef;
     border-radius: 10px;
     bottom: 0;
