--- a/capstone-design/css/sub02.css
+++ b/capstone-design/css/sub02.css
@@ -157,7 +157,7 @@ div.product_view_tab_wrap {
 .product_list > ul{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 .product_list li{
     width: 300px;
