--- a/capstone-design/css/cart.css
+++ b/capstone-design/css/cart.css
@@ -1,8 +1,11 @@
 @charset "utf-8";
 
 /* cart.html page */
-
+*{
+	border-collapse: collapse;
+}
 .cart_container{
+	margin-top: 100px;
   width: 1920px;
   /* height: 900px; */
 }
@@ -14,6 +17,7 @@
     text-align: center;
     word-break: keep-all;
     background-color: #083844;
+		margin-bottom: 50px;
 }
 .cart_headerTitle{
     display: flex;
@@ -27,10 +31,10 @@
 }
 .cart_subTilte{
 	display: block;
-    position: relative;
+  position: relative;
 	color: #fff;
-    width: 100%;
-    height: 50px;
+  width: 100%;
+  height: 50px;
 	font-size: 50px;
 	text-align: center;
 	word-break: keep-all;
@@ -39,6 +43,7 @@
 
 /* cart progress content */
 .cart_content{
+		width: 1200px;
     margin: 0 auto;
     height: auto;
     word-break: keep-all;
@@ -52,7 +57,7 @@
 	color: #fff;
 }
 .cartProgress_nav{
-    width: 1300px;
+    width: 1200px;
     margin: 0 auto;
 	background-color: #083844;
 	margin-top: 20px;
@@ -70,7 +75,7 @@
 }
 .cartProgress_detail_step{
 	display: block;
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 /* cart emty item */
@@ -85,11 +90,11 @@
 /* cart item content */
 .cartItem_content{
 	margin: 0 auto;
-	width: 1300px;
+	width: 1200px;
 }
 .cartItem_content .cartItem_list{
 	display: inline-block;
-	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
+
 	margin-bottom: 30px;
 	font-size: 20px;
 	background-color: #fff;
@@ -100,32 +105,35 @@
 	padding-right: 20px;
 }
 .cartItem_header th{
-	width: 1300px;
+	width: 1200px;
 	padding: 20px;
-	background-color: #ccc;
+	background-color: #14566614;
+	font-size: 18px;
 	color: black;
 	text-align: center;
 }
 .cartItem_header th:nth-child(1){
-	width: 30%;
+	width: 15%;
 	text-align: left;
 }
+
 .cartItem_header th span{
 	font-size: 12px;
 }
-.cartItem_product th{
-	padding: 20px;
+.cartItem_product td{
+	height: 100px;
 	font-size: 18px;
 	color: #000;
 	text-align: center;
-	border-bottom: 1px solid #ccc;
+	
 }
-.cartItem_product th:nth-child(1){
+.cartItem_product td:nth-child(1){
 	text-align: left;
+	padding-left: 20px;
 }
 .cartItem_content .deleteAllBtn{
 	float: right;
-	margin-bottom: 30px;
+	margin-left: 20px;
 	width: 160px;
 	height: 40px;
 	font-size: 18px;
@@ -149,17 +157,19 @@
 
 /* 수량 선택 버튼 */
 .cartItem_content .cartItem_list input[type="number"]{
-    width: 70px;
-    height: 70px;
-    text-align: center;
-    font-size: 25px;
+  width: 70px;
+  height: 25px;
+  text-align: center;
+  font-size: 20px;
 	margin-right: 10px;
+	border: none;
+	border-bottom: 1px solid #333;
 }
 
 /*주문 총합*/
 .cartTotal{
 	background-color: #fff;
-	width: 1300px;
+	width: 1200px;
 	height: auto;
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
 	display: flex;
@@ -193,6 +203,7 @@
 	color: #e8bb00;
 }
 .orderButton1{
+	cursor: pointer;
     width: 300px;
     height: 70px;
 	margin: 50px 70px 50px 0px;
@@ -200,9 +211,10 @@
 	font-size: 25px;
 	background-color: #fff;
 	border-radius: 35px;
-	border: 2px solid #e8bb00;
+	border: 1px solid #e8bb00;
 	color: #e8bb00;
 	font-weight: bold;
+	transition: 0.3s;
 }
 .orderButton1:hover{
 	background-color: #e8bb00;
@@ -212,16 +224,30 @@
 
 /* 재활용 */
 .recycleCap{
+	display: flex;
 	margin: 0 auto;
-	width: 1300px;
+	width: 1200px;
 	height: 200px;
 	margin-bottom: 30px;
 	background-color: #fff;
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
-	border-radius: 20px;
-	font-size: 30px;
-	line-height: 200px;
-	text-align: center;
+	text-align: left;
+	justify-content: center;
+  align-items: center;
+}
+.recycleCap p{
+	display: inline-block;
+	position: relative;
+	padding: 0 30px;
+	width: 500px;
+	font-size: 18px;
+	font-weight: normal;
+	text-align: left;
+}
+.recycleCap p > span{
+	font-size: 25px;
+	font-weight: bold;
+	line-height: 60px;
 }
 .recycleCap input{
 	accent-color: red;
@@ -229,8 +255,10 @@
 	height: 30px;
 }
 .recycleCap label{
+	display: flex;
 	cursor: pointer;
-	text-align: center;	
+	text-align: center;
+	align-items: center;
 }
 .recycleCap img{
 	width: 150px;
@@ -240,25 +268,43 @@
 /* 배송 및 결제 */
 .cart_Info{
 	margin: 0 auto;
-	width: 1300px;
+	width: 1200px;
 }
 .cart_Info table{
+	width: 1200px;
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
 	margin-bottom: 30px;
 	font-size: 20px;
 	background-color: #fff;
 	border-radius: 20px;
 }
-.cart_orderInfo, .cart_addrInfo, .cart_payInfo{
-	width: 1300px;
-	padding: 10px;
-	background-color: #ccc;
+.cart_title{
+	width: 1200px;
+	background-color: #14566614;
 	color: #000;
 	text-align: center;
 	display: flex;
+	padding: 20px;
+	font-size: 18px;
+	font-weight: bold;
 }
+.cartWrap{
+	background-color: #fff;
+	padding: 20px 30px;
+	margin-bottom: 30px;
+}
+
+.cart_cont{
+	margin-bottom: 20px;
+}
+.cart_wrap_title{
+	font-size: 18px;
+	font-weight: bold;
+	line-height: 40px;
+}
+
 .cart_Info th span{
-	font-size: 30px;
+	font-size: 20px;
 }
 .cart_Info th span .myinfo{
 	font-size: 20px;
@@ -267,15 +313,22 @@
 }
 .cart_Info th{
 	display: block;
-	padding: 30px;
-	font-size: 20px;
+	padding: 20px;
+	text-align: left;
 }
 .cart_Info input[type="text"]{
-	margin-top: 20px;
+	margin-top: 5px;
+	margin-bottom: 20px;
 	padding: 10px;
 	width: 300px;
 }
 #tel1{
+	width: 100px;
+}
+#tel2{
+	width: 100px;
+}
+#tel3{
 	width: 100px;
 }
 .cart_Info .findZipNo{
@@ -292,7 +345,7 @@
 	margin-top: 20px;
 }
 .cart_Info_button{
-	width: 1300px;
+	width: 1200px;
 	margin: 0 auto;
 	margin-bottom: 30px;
 }
@@ -328,7 +381,7 @@
 .cartTotal_final{
 	margin: 0 auto;
 	background-color: #fff;
-	width: 1300px;
+	width: 1200px;
 	height: auto;
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
 	display: flex;
@@ -364,7 +417,7 @@
 /*주문완료 페이지*/
 .orderClear{
 	margin: 0 auto;
-	width: 1300px;
+	width: 1200px;
 	height: 500px;
 	text-align: center;
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
@@ -412,4 +465,78 @@
 	color: #fff;
 	background-color: #e8bb00;
 	border: 2px solid #e8bb00;
+}
+.stepper-wrapper {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.stepper-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
+
+.stepper-item::before {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+  top: 20px;
+  left: -50%;
+  z-index: 2;
+}
+
+.stepper-item::after {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+  top: 20px;
+  left: 50%;
+  z-index: 2;
+}
+
+.stepper-item .step-counter {
+  position: relative;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #ccc;
+  margin-bottom: 6px;
+}
+
+.stepper-item.active {
+  font-weight: bold;
+}
+
+.stepper-item.completed .step-counter {
+  background-color: #E8BB00;
+}
+
+.stepper-item.completed::after {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #E8BB00;
+  width: 100%;
+  top: 20px;
+  left: 50%;
+  z-index: 3;
+}
+
+.stepper-item:first-child::before {
+  content: none;
+}
+.stepper-item:last-child::after {
+  content: none;
+}
+.cart_qty{
+
 }
