--- a/capstone-design/css/productDetail.css
+++ b/capstone-design/css/productDetail.css
@@ -4,12 +4,7 @@
 *{list-style: none; padding: 0; margin: 0;}
 body{padding: 50px;}
 */
-#header .topmenu > li > a{
-	color: #fff;
-}
-#header .nav_top .quick_menu a{
-	color: #fff;
-}
+
 .containerWrap{
 	display: block;
 	width: 1920px;
@@ -90,11 +85,12 @@ body{padding: 50px;}
 
 .productDetail_list{
 	position: relative;
+	margin-top: 30px;
 	width: 480px;
 	float: right;
 	background-color: #c5cea4d3;
 	backdrop-filter: blur(5px);
-	padding: 50px 40px;
+	padding: 40px 40px;
 	border-radius: 20px;
 	box-shadow: rgba(255, 255, 255, 0.2) 0px 7px 29px 0px;
 }
